[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-handoff"
version = "0.1.1"
description = "Export readable Codex session context and repo state into a handoff package for another agent."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "paperplane123" }
]
dependencies = []

[project.scripts]
codex-handoff = "codex_handoff.cli:main"

[tool.setuptools]
packages = ["codex_handoff"]
